Added documentation for MNIST

--- a/examples/MNIST.ipynb
+++ b/examples/MNIST.ipynb
@@ -1,11 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction to MyVision\n",
+    "This is a library I made to combine everything I <3 about PyTorch.\n",
+    "My goal is \"Do more with less code\". Well `MyVision` is a wrapper over PyTorch.\n",
+    "That means u must know PyTorch before working with it and if u know PyTorch you can yourself make any customizations. Just have at look at the source code on github.\n",
+    "\n",
+    "With this aside let's start our example. It's the MNIST example as u might have guessed already :P"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# torch imports\n",
     "import torch\n",
     "import torchvision\n",
     "from torchvision import datasets\n",
@@ -19,20 +32,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# standard \"Every ML/DL problem\" imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, let me give u a brief overview of what `MyVision` offers:\n",
+    "There are two important things at the heart of it.\n",
+    "1. Dataset\n",
+    "2. Trainer\n",
+    "<br>\n",
+    "The former one we will go through in another example.\n",
+    "Here, we go through `Trainer`\n",
+    "\n",
+    "So what is `Trainer`?\n",
+    "Simply, Trainer provides trainig and validation methods, normally in PyTorch you have to write your\n",
+    "custom loop, which let me tell you, gives you ultimate customization. But I wanted to do something like what keras `.fit()` offers. So I decided to build it up.\n",
+    "\n",
+    "Trainer offers you this keras like `.fit()` magic. With proper parameters you can simply `.fit()` and *boom!* training begins.\n",
+    "\n",
+    "So, let's import the specifics. \n",
+    "Our `Trainer` is present in `MyVision.engine.Engine`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import MyVision\n",
     "from MyVision.dataset.Dataset import DatasetUtils\n",
     "from MyVision.engine.Engine import Trainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we just make the two DataLoaders because as you know in PyTorch `DataLoader` is where the heavylifting takes place. Our trainer expects these DataLoaders"
    ]
   },
   {
@@ -58,23 +101,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "torchvision.models.resnet18(pretrained=True).conv1"
+    "Next we do usual stuff i.e. define our `model`, `optimizer` & `loss` "
    ]
   },
   {
@@ -88,6 +118,39 @@
     "model.fc = torch.nn.Linear(in_features=model.fc.in_features, out_features=10)\n",
     "loss = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adadelta(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is the part to what we have been building upto aka `Trainer`.\n",
+    "Let's have a look at what the `Trainer` takes.\n",
+    "Run the cell below to see:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?Trainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will see that out `Trainer` just takes in the usual stuff:\n",
+    "1. Training, Validation & Test(if specified) DataLoaders\n",
+    "2. device(either `cpu` or `cuda`)\n",
+    "3. loss\n",
+    "4. optimizer\n",
+    "5. model\n",
+    "6. learning rate scheduler(if you want)\n",
+    "<br>\n",
+    "Whatever you don't want just specify it as `None`."
    ]
   },
   {
@@ -106,6 +169,14 @@
     "    model=model.to('cuda'),\n",
     "    lr_scheduler=None\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, for the magic to begin specifiy number of epochs and the scheduler metric in the `.fit()`\n",
+    "Now just run the cell below and we are off !"
    ]
   },
   {
@@ -350,6 +421,20 @@
    ],
    "source": [
     "trainer.fit(10, 'accuracy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you must have seen most of it just regular PyTorch stuff but with lots of convinience. If you know PyTorch it's just a breeze for you to understand :) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also `MyVision` creates a models folder in the directory where you run the script and saves the best models to it epoch-wise "
    ]
   },
   {
